Defualt Page made

--- a/src/template.html
+++ b/src/template.html
@@ -4,17 +4,22 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>js framework</title>
+    <title>Zacket - the comment based framwork</title>
+    <!-- default-styles -->
+
 </head>
 
 <body>
-    <h1>
+    <div class="main">
 
-        <!-- title -->
-        <!-- author -->
-        <!-- date -->
-        <!-- content -->
-    </h1>
+        <h1><!-- title --></h1>
+        <span>
+            by:<!-- author -->
+        </span>
+        <div id="content">
+            <!-- content -->
+        </div>
+    </div>
 </body>
 
 </html>
