--- a/src/baseof.html
+++ b/src/baseof.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Zacket - the comment based framwork</title>
+    <title>Zacket - the comment based static site generator</title>
     <!-- default-styles -->
 
 </head>
@@ -13,6 +13,10 @@
     <div class="main">
 
         <h1><!-- title --></h1>
+        <p>
+
+            <!-- sub -->
+        </p>
         <span>
             by:<!-- author -->
         </span>
